cp: 	PR c++/14007 	* pt.c (check_cv_quals_for_unify): Correct logic for disallowed 	cv-qualifier unification. 	* tree.c (cp_build_qualified_type_real): Renable DR295 logic. testsuite: 	PR c++/14007 	* g++.dg/template/unify5.C: New. 	* g++.dg/template/unify6.C: New. 	* g++.dg/template/qualttp20.C: Adjust. 	* g++.old-deja/g++.jason/report.C: Adjust. 	* g++.old-deja/g++.other/qual1.C: Adjust.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@80351 138bc75d-0d04-0410-961f-82ee72b054a4